Add LoggingTheme Enum. (#517)